--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.4.0",
     "@gridsome/transformer-yaml": "^0.2.1",
+    "@gridsome/vue-remark": "^0.1.8",
     "buefy": "^0.8.6",
     "gridsome": "^0.7.0"
   },
