Set up the LeadershipHeadshots component to be working correctly

--- a/content/leadership.yml
+++ b/content/leadership.yml
@@ -1,4 +1,12 @@
-- name: Sam Weaver
-  title: Interim Director of Media and Marketing
+- name: Adithya Balaji
+  title: President
+- name: Matt Wyland
+  title: Treasurer
+- name: Alexander Wichowski
+  title: Officer
+- name: Keith Mellendorf
+  title: VP, Volunteering
 - name: Kyle Brown
-  title: title
+  title: VP, Operations
+- name: Sam Weaver
+  title: VP, Media and Marketing (Interim)
