Add updated leadership headshots

--- a/content/leadership.yml
+++ b/content/leadership.yml
@@ -1,12 +1,12 @@
-- name: Adithya Balaji
+- name: Anna Lawrence
   title: President
-- name: Matt Wyland
+- name: Collin Nelson
   title: Treasurer
-- name: Alexander Wichowski
+- name: Joe Schroedl
   title: Officer
-- name: Keith Mellendorf
+- name: Sammie Graff
   title: VP, Volunteering
-- name: Kyle Brown
+- name: Samuel Ray-Alverson
   title: VP, Operations
 - name: Sam Weaver
-  title: VP, Media and Marketing (Interim)
+  title: Officer
